--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,9 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-yarn-
     - name: Install Dependencies
-      if: steps.yarn-cache.outputs.cache-hit != 'true'
-      run: |
-        yarn install 
+      run: yarn install 
     - name: Build
-      run: |
-        npm install vue-cli-service -g
-        yarn build
+      run: yarn build
     - name: Release
       run: |
         rm ./docs -R
