build: fix commit lint

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - name: 'Commit Lint'
-      uses: "cdotyone/github-commit-lint@main"      
+      uses: "cdotyone/github-commit-lint@main"
+      with:
+        message: "${{github.event.head_commit.message}}"   
     - name: Use Node.js 12.x
       uses: actions/setup-node@v2-beta
     - name: Install Dependencies
